force-app/main/default/objects/Account/fields/Abo_Sports__c.field-meta.xml
<CustomField>
    <fullName>Abo_Sports__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Abo_Sports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>