force-app/main/default/objects/Account/fields/Abonnement_canal_motive_par_le_cinema__c.field-meta.xml
<CustomField>
    <fullName>Abonnement_canal_motive_par_le_cinema__c</fullName>
    <label>Abonnement Canal+ motivé par le CINEMA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Abonnement_Canal_plus</valueSetName>
    </valueSet>
</CustomField>