force-app/main/default/objects/Account/fields/Abonnement_canal_motive_par_les_series__c.field-meta.xml
<CustomField>
    <fullName>Abonnement_canal_motive_par_les_series__c</fullName>
    <label>Abonnement Canal+ motivé par les SERIES</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Abonnement_Canal_plus</valueSetName>
    </valueSet>
</CustomField>