force-app/main/default/objects/Account/fields/Adresse_e_mail_principale__c.field-meta.xml
<CustomField>
    <fullName>Adresse_e_mail_principale__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Adresse e-mail principale</label>
    <type>Email</type>
</CustomField>