force-app/main/default/objects/Account/fields/Autre_numero__c.field-meta.xml
<CustomField>
    <fullName>Autre_numero__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Autre numéro</label>
    <type>Phone</type>
</CustomField>