force-app/main/default/objects/Account/fields/AVAYA_3_phones__c.field-meta.xml
<CustomField>
    <fullName>AVAYA_3_phones__c</fullName>
    <formula>Numero_de_telephone_fixe__c + &quot; &quot; + Numero_de_portable__c + &quot; &quot; + Numero_du_conjoint__c + &quot; &quot; + Autre_numero__c</formula>
    <label>AVAYA_3_phones</label>
    <type>Text</type>
</CustomField>