force-app/main/default/objects/Account/fields/Avaya_UUI_tech__c.field-meta.xml
<CustomField>
    <fullName>Avaya_UUI_tech__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Avaya UUI tech</label>
    <length>32</length>
    <type>Text</type>
</CustomField>