force-app/main/default/objects/Account/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>