force-app/main/default/objects/Account/fields/CanalSat__c.field-meta.xml
<CustomField>
    <fullName>CanalSat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CanalSat</label>
    <length>250</length>
    <type>Text</type>
</CustomField>