force-app/main/default/objects/Account/fields/Complement_d_adresse__c.field-meta.xml
<CustomField>
    <fullName>Complement_d_adresse__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Complément d&apos;adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>