force-app/main/default/objects/Account/fields/Contact_principal__c.field-meta.xml
<CustomField>
    <fullName>Contact_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact principal</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Cet individu (Contact Principal) n&apos;existe pas ou n&apos;est pas rattaché à ce foyer.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Foyers (Contact principal)</relationshipLabel>
    <relationshipName>Foyers_en_tant_que_contact_principal</relationshipName>
    <type>Lookup</type>
</CustomField>