force-app/main/default/objects/Account/fields/Creneaux_de_disponibilite__c.field-meta.xml
<CustomField>
    <fullName>Creneaux_de_disponibilite__c</fullName>
    <label>Créneaux de disponibilité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9h-10h</fullName>
            </value>
            <value>
                <fullName>10h-12h</fullName>
            </value>
            <value>
                <fullName>12h-13h</fullName>
            </value>
            <value>
                <fullName>13h-14h</fullName>
            </value>
            <value>
                <fullName>14h-16h</fullName>
            </value>
            <value>
                <fullName>16h-18h</fullName>
            </value>
            <value>
                <fullName>18h-19h</fullName>
            </value>
            <value>
                <fullName>19h-20h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>