force-app/main/default/objects/Account/fields/Date_d_anonymisation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_anonymisation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;anonymisation</label>
    <type>Date</type>
</CustomField>