force-app/main/default/objects/Account/fields/Date_de_chute__c.field-meta.xml
<CustomField>
    <fullName>Date_de_chute__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de chute</label>
    <type>Date</type>
</CustomField>