force-app/main/default/objects/Account/fields/Date_de_chute_temporaire__c.field-meta.xml
<CustomField>
    <fullName>Date_de_chute_temporaire__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de chute temporaire</label>
    <type>Date</type>
</CustomField>