force-app/main/default/objects/Account/fields/Date_de_derniere_commande__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_commande__c</fullName>
    <label>Date de dernière commande</label>
    <summarizedField>Fidelisation__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>Fidelisation__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Débit</value>
    </summaryFilterItems>
    <summaryForeignKey>Fidelisation__c.Foyer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>