force-app/main/default/objects/Account/fields/Date_de_fin_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_d_intervention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de fin d’intervention</label>
    <type>DateTime</type>
</CustomField>