force-app/main/default/objects/Account/fields/Date_de_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Freeze__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de Freeze</label>
    <type>Date</type>
</CustomField>