force-app/main/default/objects/Account/fields/Date_de_l_enquete__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_enquete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de l&apos;enquête</label>
    <type>Date</type>
</CustomField>