force-app/main/default/objects/Account/fields/Date_de_recensement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_recensement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de recensement</label>
    <type>Date</type>
</CustomField>