force-app/main/default/objects/Account/fields/Date_OK_CATI2__c.field-meta.xml
<CustomField>
    <fullName>Date_OK_CATI2__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date OK CATI2</label>
    <type>DateTime</type>
</CustomField>