force-app/main/default/objects/Account/fields/Date_RCS_au_fil_de_leau__c.field-meta.xml
<CustomField>
    <fullName>Date_RCS_au_fil_de_leau__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date RCS au fil de l&apos;eau</label>
    <type>Date</type>
</CustomField>