force-app/main/default/objects/Account/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <formula>LEFT(ShippingPostalCode , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département</label>
    <type>Text</type>
</CustomField>