force-app/main/default/objects/Account/fields/Digicode_Interphone__c.field-meta.xml
<CustomField>
    <fullName>Digicode_Interphone__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Digicode/Interphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>