force-app/main/default/objects/Account/fields/Equipe_enceintes_TV__c.field-meta.xml
<CustomField>
    <fullName>Equipe_enceintes_TV__c</fullName>
    <label>Equipé enceintes TV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Non concerné</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Oui</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>