force-app/main/default/objects/Account/fields/Equipe_internet__c.field-meta.xml
<CustomField>
    <fullName>Equipe_internet__c</fullName>
    <label>Equipé Internet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Oui</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Non / NSP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>