force-app/main/default/objects/Account/fields/Foyer_Multi_Panel__c.field-meta.xml
<CustomField>
    <fullName>Foyer_Multi_Panel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foyer Multi-Panel</label>
    <type>Checkbox</type>
</CustomField>