force-app/main/default/objects/Account/fields/foyer_stock__c.field-meta.xml
<CustomField>
    <fullName>foyer_stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>foyer stock</label>
    <type>Checkbox</type>
</CustomField>