force-app/main/default/objects/Account/fields/Foyer_technique__c.field-meta.xml
<CustomField>
    <fullName>Foyer_technique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foyer technique</label>
    <type>Checkbox</type>
</CustomField>