force-app/main/default/objects/Account/fields/Freeze__c.field-meta.xml
<CustomField>
    <fullName>Freeze__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case à cocher permet de bloquer l&apos;attribution de points du foyer</description>
    <label>Freeze</label>
    <type>Checkbox</type>
</CustomField>