force-app/main/default/objects/Account/fields/Jardin__c.field-meta.xml
<CustomField>
    <fullName>Jardin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jardin</label>
    <type>Checkbox</type>
</CustomField>