force-app/main/default/objects/Account/fields/Maj_coordonnees__c.field-meta.xml
<CustomField>
    <fullName>Maj_coordonnees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Màj coordonnées</label>
    <type>Date</type>
</CustomField>