force-app/main/default/objects/Account/fields/Motif_de_chute__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_chute__c</fullName>
    <label>Motif de chute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition d’une TV</fullName>
            </value>
            <value>
                <fullName>A l’initiative de MM</fullName>
            </value>
            <value>
                <fullName>A l’initiative du panéliste</fullName>
            </value>
            <value>
                <fullName>Aucun accès Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>