force-app/main/default/objects/Account/fields/Motif_de_suspension__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_suspension__c</fullName>
    <label>Motif de suspension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>105</fullName>
                <label>Audience différée sans equipement</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Autre audience incorrecte (hors bagotement / autre usage anormal)</label>
            </value>
            <value>
                <fullName>89</fullName>
                <label>Autre usage anormal, dont bagotement</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Chgt / Inst TV / TV temporaire non installé</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Chgt / Inst décodeur num</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>Chute</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Déménagement / travaux en cours</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>En attente matériel MM</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>KO DTV audience hors norme (impactant les résultats)</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>KO DTV pour investigation</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Pilote</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>TV non relié à l’audimètre</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>Mauvaise audience</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>Audience incohérente</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>En attente de chute</label>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>