force-app/main/default/objects/Account/fields/Nom_de_famille__c.field-meta.xml
<CustomField>
    <fullName>Nom_de_famille__c</fullName>
    <formula>Personne_de_reference__r.LastName</formula>
    <label>Nom de famille</label>
    <type>Text</type>
</CustomField>