force-app/main/default/objects/Account/fields/Nombre_de_p_riph_rique__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_p_riph_rique__c</fullName>
    <formula>Nombre_pc__c + Nombre_smartphone__c + Nombre_tablette__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de périphériques</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>