force-app/main/default/objects/Account/fields/Nombre_de_points_debites__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_points_debites__c</fullName>
    <label>Nombre de points débités</label>
    <summarizedField>Fidelisation__c.Points_debites__c</summarizedField>
    <summaryFilterItems>
        <field>Fidelisation__c.Statut_de_commande__c</field>
        <operation>notEqual</operation>
        <value>Annulée</value>
    </summaryFilterItems>
    <summaryForeignKey>Fidelisation__c.Foyer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>