force-app/main/default/objects/Account/fields/Nombre_de_smartphone__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_smartphone__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de smartphones</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>