force-app/main/default/objects/Account/fields/Nombre_de_tablette__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_tablette__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de tablettes</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>