force-app/main/default/objects/Account/fields/Nombre_pc__c.field-meta.xml
<CustomField>
    <fullName>Nombre_pc__c</fullName>
    <label>Nombre d&apos;ordinateurs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>