force-app/main/default/objects/Account/fields/Nombre_smartphone__c.field-meta.xml
<CustomField>
    <fullName>Nombre_smartphone__c</fullName>
    <label>Nombre de smartphones</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>