force-app/main/default/objects/Account/fields/Nombre_tablette__c.field-meta.xml
<CustomField>
    <fullName>Nombre_tablette__c</fullName>
    <label>Nombre de tablettes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>