force-app/main/default/objects/Account/fields/Nombre_tv_total__c.field-meta.xml
<CustomField>
    <fullName>Nombre_tv_total__c</fullName>
    <label>Nombre TV total dans le foyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Aucune TV</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 TV</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 TV</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 TV</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 TV</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 TV ou plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>