force-app/main/default/objects/Account/fields/Numero_de_portable__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_portable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro de téléphone portable</label>
    <type>Phone</type>
</CustomField>