force-app/main/default/objects/Account/fields/Numero_du_conjoint__c.field-meta.xml
<CustomField>
    <fullName>Numero_du_conjoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro du conjoint</label>
    <type>Phone</type>
</CustomField>