force-app/main/default/objects/Account/fields/Personne_de_reference__c.field-meta.xml
<CustomField>
    <fullName>Personne_de_reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personne de référence</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Cet individu n&apos;existe pas ou n&apos;est pas rattaché à ce foyer.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Foyers</relationshipLabel>
    <relationshipName>Foyers</relationshipName>
    <type>Lookup</type>
</CustomField>